<resources>
    <string name="app_name">CEIT Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CEIT Management</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hint_username">Admin Username</string>
    <string name="hint_password">Admin Password</string>
    <string name="btn_login">Login</string>
    <string name="text_class">Class</string>
    <string name="text_students">Students</string>
    <string name="text_teachers">Teachers</string>
    <string name="text_parents">Parents</string>
    <string name="hint_search_teacher">Search teacher</string>
    <string name="placeholder_item_teacher_name">Teacher Name</string>
    <string name="placeholder_teacher_gender">Teacher Gender</string>
    <string name="placeholder_teacher_rank">Teacher Rank</string>
    <string name="action_search">Search</string>
    <string name="placeholder_adviser_name">Teacher Name</string>
    <string name="placeholder_department_name">Department Name</string>
    <string name="placeholder_student_name">Student Name</string>
    <string name="placeholder_class_name">Class Name</string>
    <string name="placeholder_student_gender">Student Gender</string>
    <string name="placeholder_parent_name">Parent Name</string>
    <string name="placeholder_parent_occupation">Parent Occupation</string>
    <string name="placeholder_parent_gender">Parent Gender</string>
    <string name="overlay_no_internet_connection">No Internet Connection</string>
    <string name="overlay_server_error">Server made a boo boo</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_general">General</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_teachers">Teachers</string>
    <string name="menu_class">Classes</string>
    <string name="menu_students">Students</string>
    <string name="menu_parents">Parents</string>
    <string name="menu_admin_settings">Admin Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="bottom_frag_classes">Classes</string>
    <string name="bottom_frag_removed_classes">Removed</string>
    <string name="fab_add">add</string>
    <string name="bot_nav_hidden_text">hidden_text</string>
    <string name="bot_nav_active_classes" formatted="true">Active</string>
    <string name="bottom_frag_teachers">Teachers</string>
    <string name="bottom_frag_removed_teachers">Removed</string>
    <string name="bottom_frag_parents">Parents</string>
    <string name="bottom_frag_removed_parents">Removed</string>
    <string name="bottom_frag_students">Students</string>
    <string name="bottom_frag_removed_students">Removed</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="desc_background">background</string>
    <string name="header_birth_date">Birth Date</string>
    <string name="header_gender">Gender</string>
    <string name="caret_down">⋁</string>
    <string name="header_email">Email</string>
    <string name="header_contact_number">Contact Number</string>
    <string name="header_address">Address</string>
    <string name="header_section">Section</string>
    <string name="header_religion">Religion</string>
    <string name="btn_save_profile">Save Profile</string>
    <string name="btn_cancel_edit">Cancel Edit</string>
    <string name="desc_icon">icon</string>
    <string name="input_class_name">Class Name</string>
    <string name="input_class_department">Class Department</string>
    <string name="input_class_teacher">Class Teacher</string>
    <string name="str_btn_add_class">Add Class</string>
    <string name="btn_cancel">Cancel</string>
    <string name="header_occupation">Occupation</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_address">Address</string>
    <string name="hint_contact_number">+639-xxx-xxx-xxx</string>
    <string name="hint_email_address">youremailaddress@gmail.com</string>
    <string name="hint_religion">Your religion</string>
    <string name="empty_string">" "</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="btn_add_parent">Add Parent</string>
    <string name="str_add_child">Add Child</string>
    <string name="no_child_selected">No child selected</string>
    <string name="hint_enter_child_s_name">Enter child\'s name</string>
    <string name="header_child">Child</string>
    <string name="hint_full_name">Full name</string>
    <string name="header_rank">Rank</string>
    <string name="hint_rank">Rank (eg: Teacher 2)</string>
    <string name="btn_add_teacher">Add Teacher</string>
    <string name="btn_update_credentials">Update Credentials</string>
    <string name="hint_old_admin_username">Old Admin Username</string>
    <string name="hint_old_admin_password">Old Admin Password</string>
    <string name="hint_new_admin_password">New Admin Password</string>
    <string name="hint_new_admin_username">New Admin Username</string>
</resources>