<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="12dp"
    style="@style/CardView.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.chauthai.swipereveallayout.SwipeRevealLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:dragEdge="right"
            app:mode="same_level">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/delete_layout"
                        android:padding="10dp"
                        android:layout_width="70dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:scaleType="centerInside"
                        android:background="@android:color/holo_red_dark"
                        android:contentDescription="@string/desc_icon"
                        android:src="@android:drawable/ic_menu_delete"
                        app:tint="@android:color/white"/>

                    <ImageView
                        android:id="@+id/restore_layout"
                        android:padding="10dp"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:scaleType="centerInside"
                        android:background="#03A9F4"
                        android:contentDescription="@string/desc_icon"
                        android:src="@android:drawable/ic_menu_rotate"
                        app:tint="@android:color/white"/>

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/front_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/parent_photo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
                        app:srcCompat="@drawable/parents"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical"
                        android:gravity="center|start">

                        <TextView
                            android:id="@+id/parent_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="start"
                            android:textColor="@color/themeColor"
                            android:text="@string/placeholder_parent_name"
                            android:textAppearance="?android:textAppearanceMedium"/>

                        <TextView
                            android:id="@+id/parent_occupation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins_light"
                            android:gravity="start"
                            android:textColor="@color/positiveColorClicked"
                            android:text="@string/placeholder_parent_occupation"
                            android:textAppearance="?android:textAppearanceSmall"/>

                        <TextView
                            android:id="@+id/parent_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_light"
                            android:gravity="start"
                            android:textColor="@color/positiveColorClicked"
                            android:text="@string/placeholder_parent_gender"
                            android:textAppearance="?android:textAppearanceSmall"/>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </com.chauthai.swipereveallayout.SwipeRevealLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>