<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="12dp"
    style="@style/CardView.Light">

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:dragEdge="right"
        app:mode="same_level">

        <FrameLayout
            android:id="@+id/delete_layout"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:text="Delete"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/front_layout"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/student_photo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
                    app:srcCompat="@drawable/student"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:gravity="center|start">

                    <TextView
                        android:id="@+id/student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="start"
                        android:textColor="@color/themeColor"
                        android:text="@string/placeholder_student_name"
                        android:textAppearance="?android:textAppearanceMedium"/>

                    <TextView
                        android:id="@+id/student_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="start"
                        android:textColor="@color/positiveColorClicked"
                        android:text="@string/placeholder_class_name"
                        android:textAppearance="?android:textAppearanceSmall"/>

                    <TextView
                        android:id="@+id/student_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="start"
                        android:textColor="@color/positiveColorClicked"
                        android:text="@string/placeholder_student_gender"
                        android:textAppearance="?android:textAppearanceSmall"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </com.chauthai.swipereveallayout.SwipeRevealLayout>

</com.google.android.material.card.MaterialCardView>