<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/sheet_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_peekHeight="0dp"
    app:behavior_hideable="true"
    app:behavior_draggable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_classname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/input_class_name"
            android:fontFamily="@font/roboto_regular"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/positiveColorDefault"
            app:boxStrokeErrorColor="@color/negativeColorDefault"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:padding="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/input_class_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:spinnerMode="dropdown"
            android:entries="@array/dept_college_list"
            android:background="@drawable/input_underline"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/input_class_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:entries="@array/empty_teacher"
            android:background="@drawable/input_underline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_class"
                android:background="@drawable/btn_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="20dp"
                android:text="@string/str_btn_add_class"
                android:textColor="@color/textColor"
                android:fontFamily="@font/poppins_light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:background="@drawable/btn_negative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_light"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>