<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/coordinatorLayout">

   <ScrollView
       android:background="@android:color/transparent"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:fitsSystemWindows="true"
       android:scrollbars="none">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_gravity="center"
           android:gravity="center">

           <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:layout_gravity="center"
               android:layout_marginBottom="25dp"
               app:srcCompat="@drawable/logo"/>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/input_username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/hint_username"
               android:fontFamily="@font/roboto_regular"
               app:errorEnabled="true"
               app:boxCornerRadiusBottomEnd="8dp"
               app:boxCornerRadiusTopEnd="8dp"
               app:boxCornerRadiusBottomStart="8dp"
               app:boxCornerRadiusTopStart="8dp"
               app:boxStrokeColor="@color/positiveColorDefault"
               app:boxStrokeErrorColor="@color/negativeColorDefault"
               app:endIconMode="custom"
               app:endIconDrawable="@android:drawable/ic_lock_lock"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/poppins_light"
                   android:padding="20dp"
                   android:inputType="text"
                   android:singleLine="true"
                   android:imeOptions="actionNext"/>

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/input_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_password"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:fontFamily="@font/roboto_regular"
               app:errorEnabled="true"
               app:boxCornerRadiusBottomEnd="8dp"
               app:boxCornerRadiusTopEnd="8dp"
               app:boxCornerRadiusBottomStart="8dp"
               app:boxCornerRadiusTopStart="8dp"
               app:boxStrokeColor="@color/positiveColorDefault"
               app:boxStrokeErrorColor="@color/negativeColorDefault"
               app:endIconMode="password_toggle"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/poppins_light"
                   android:padding="20dp"
                   android:inputType="textPassword"
                   android:singleLine="true"
                   android:imeOptions="actionDone"/>

           </com.google.android.material.textfield.TextInputLayout>

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btn_login"
               android:background="@drawable/btn_selector"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="30dp"
               android:layout_marginBottom="5dp"
               android:padding="20dp"
               android:text="@string/btn_login"
               android:textColor="@color/textColor"
               android:fontFamily="@font/poppins_light"/>

       </LinearLayout>

   </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>